--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = ryan.najac@colubia.edu
-	name = Ryan Najac
+	email = rdn2108@colubia.edu
+	name = Ryan David Najac
 [init]
 	defaultBranch = main
 [core]
