--- a/.gitconfig
+++ b/.gitconfig
@@ -11,3 +11,10 @@
 [credential "https://gist.github.com"]
 	helper = 
 	helper = !/usr/bin/gh auth git-credential
+[pull]
+	rebase = false
+[mergetool]
+	prompt = false
+[merge]
+	tool = vimdiff
+	conflictstyle = diff3
