--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,10 @@
 [user]
 	email = rdn2108@columbia.edu
-	name = Ryan David Najac
+	name = Ryan D. Najac
 [init]
 	defaultBranch = main
 [core]
-	excludesFile = ~/.gitignore
+	excludesFile = ~/.files/.gitignore
 [credential "https://github.com"]
 	helper = 
 	helper = !/usr/bin/gh auth git-credential
