--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "/Users/rdn/.files/.vim/pack/plugins/start/RootIgnore"]
 	path = /Users/rdn/.files/.vim/pack/plugins/start/RootIgnore
 	url = https://github.com/octref/RootIgnore.git
+[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-snippets"]
+	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-snippets
+	url = https://github.com/honza/vim-snippets.git
