Add Vim plugin: tpope/vim-repeat

--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-which-key"]
 	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-which-key
 	url = https://github.com/liuchengxu/vim-which-key.git
+[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-repeat"]
+	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-repeat
+	url = https://github.com/tpope/vim-repeat.git
