--- a/.gitmodules
+++ b/.gitmodules
@@ -1,45 +1,3 @@
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-fugitive"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-surround"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-surround
-	url = https://github.com/tpope/vim-surround.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-commentary"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-commentary
-	url = https://github.com/tpope/vim-commentary.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vimtex"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vimtex
-	url = https://github.com/lervag/vimtex.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/ultisnips"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/ultisnips
-	url = https://github.com/SirVer/ultisnips.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/copilot.vim"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/copilot.vim
-	url = https://github.com/github/copilot.vim.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/RootIgnore"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/RootIgnore
-	url = https://github.com/octref/RootIgnore.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-snippets"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-snippets
-	url = https://github.com/honza/vim-snippets.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-tmux-navigator"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-tmux-navigator
-	url = https://github.com/christoomey/vim-tmux-navigator.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vimux"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vimux
-	url = https://github.com/preservim/vimux.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-which-key"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-which-key
-	url = https://github.com/liuchengxu/vim-which-key.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-repeat"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-repeat
-	url = https://github.com/tpope/vim-repeat.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/editorconfig-vim"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/editorconfig-vim
-	url = https://github.com/editorconfig/editorconfig-vim.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/vim-markdown"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/vim-markdown
-	url = https://github.com/preservim/vim-markdown.git
-[submodule "/Users/rdn/.files/.vim/pack/plugins/start/yowish.vim"]
-	path = /Users/rdn/.files/.vim/pack/plugins/start/yowish.vim
+[submodule "/Users/rdn/.files/vim/pack/plugins/start/yowish.vim"]
+	path = /Users/rdn/.files/vim/pack/plugins/start/yowish.vim
 	url = https://github.com/KabbAmine/yowish.vim.git
