--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,7 @@ set-option -ga terminal-overrides ",alacritty:Tc"
 unbind C-b
 set -g prefix C-a
 set-window-option -g mode-keys vi
+bind S if-shell "test $(tmux list-panes | wc -l) -eq 2" "swap-pane -s :.0" "display 'Not enough panes'"
 
 # key bindings {{{
 bind h split-window -v -c '#{pane_current_path}'
@@ -35,6 +36,7 @@ set -g status-style fg=white,bg=black
 set -g pane-active-border-style 'fg=colour250'
 set -g pane-border-style 'fg=colour235'
 set -g window-style 'bg=colour234'
+set -g window-active-style 'bg=#000000'
 set -g window-active-style 'bg=#000000'
 
 set -g @plugin 'tmux-plugins/tpm'
