--- a/tmux.conf
+++ b/tmux.conf
@@ -1,33 +1,23 @@
 # tmux configuration file
-# vim: set foldmethod=marker:
-# no bell and enable mouse {{{1
 set -g bell-action none
 set -g mouse on
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
-# }}}1
-# terminal colors {{{1
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",alacritty*:RGB"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -ga terminal-overrides ",alacritty:Tc"
-# }}}1
-unbind C-b
-set -g prefix C-a
 set-window-option -g mode-keys vi
 bind S if-shell "test $(tmux list-panes | wc -l) -eq 2" "swap-pane -s :.0" "display 'Not enough panes'"
-
-# key bindings {{{
-bind h split-window -v -c '#{pane_current_path}'
 bind '\' setw synchronize-panes
 bind i set-option status
+#bind Tab choose-tree -Z
 
 # resize panes with shift+arrow
 bind -n S-Up resize-pane -U 5
 bind -n S-Down resize-pane -D 5
 bind -n S-Left resize-pane -L 5
 bind -n S-Right resize-pane -R 5
-# }}}
 
 set -g monitor-activity on
 set -g visual-activity on
@@ -39,8 +29,8 @@ set -g window-style 'bg=colour234'
 set -g window-active-style 'bg=#000000'
 set -g window-active-style 'bg=#000000'
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-run '~/.tmux/plugins/tpm/tpm'
-
+#set -g @plugin 'tmux-plugins/tpm
+#run '~/.tmux/plugins/tpm/tpm'
+# instead, source the locally-cloned files 
+source-file ~/.files/shell/sensible.tmux
+source-file ~/.files/shell/vim-tmux-navigator.tmux
