--- a/tmux.conf
+++ b/tmux.conf
@@ -1,36 +1,104 @@
+# vim:fdm=marker
 # tmux configuration file
-set -g bell-action none
 set -g mouse on
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
+
+set -g bell-action none
+set -g visual-activity on
+set -g monitor-activity on
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",alacritty*:RGB"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -ga terminal-overrides ",alacritty:Tc"
+
 set-window-option -g mode-keys vi
-bind S if-shell "test $(tmux list-panes | wc -l) -eq 2" "swap-pane -s :.0" "display 'Not enough panes'"
+
+set-option -g prefix2 C-a
+bind C-u send-keys C-u
+bind C-a last-window
 bind '\' setw synchronize-panes
 bind i set-option status
 #bind Tab choose-tree -Z
 
-# resize panes with shift+arrow
+# resize panes with shift+arrow {{{
 bind -n S-Up resize-pane -U 5
 bind -n S-Down resize-pane -D 5
 bind -n S-Left resize-pane -L 5
 bind -n S-Right resize-pane -R 5
+# }}}
 
-set -g monitor-activity on
-set -g visual-activity on
+bind S if-shell "test $(tmux list-panes | wc -l) -eq 2" "swap-pane -s :.0" "display 'Not enough panes'"
+
 set -g status-style fg=white,bg=black
-
 set -g pane-active-border-style 'fg=colour250'
 set -g pane-border-style 'fg=colour235'
 set -g window-style 'bg=colour234'
 set -g window-active-style 'bg=#000000'
 set -g window-active-style 'bg=#000000'
 
-#set -g @plugin 'tmux-plugins/tpm
-#run '~/.tmux/plugins/tpm/tpm'
-# instead, source the locally-cloned files 
-source-file ~/.files/shell/sensible.tmux
-source-file ~/.files/shell/vim-tmux-navigator.tmux
+# no plugin manager needed
+# tmux-sensible {{{
+# https://github.com/tmux-plugins/tmux-sensible/blob/master/sensible.tmux
+
+# address vim mode switching delay (http://superuser.com/a/252717/65504)
+tmux set-option -s escape-time 0
+
+# increase scrollback buffer size
+tmux set-option -g history-limit 50000
+
+# tmux messages are displayed for 4 seconds
+tmux set-option -g display-time 4000
+
+# refresh 'status-left' and 'status-right' more often
+tmux set-option -g status-interval 5
+
+# required (only) on OS X
+tmux set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+tmux set-option -g status-keys emacs
+
+# focus events enabled for terminals that support them
+tmux set-option -g focus-events on
+
+# super useful when using "grouped sessions" and multi-monitor setup
+tmux set-window-option -g aggressive-resize on
+
+# easier switching between next/prev window
+tmux bind-key C-p previous-window
+tmux bind-key C-n next-window
+
+# source `.tmux.conf` file - as suggested in `man tmux`
+tmux bind-key r run-shell " \
+tmux source-file ${tmux_config} > /dev/null; \
+tmux display-message 'Sourced ${tmux_config}!'"
+# }}}
+# vim-tmux-navigator {{{
+# https://github.com/christoomey/vim-tmux-navigator/blob/master/vim-tmux-navigator.tmux
+version_pat='s/^tmux[^0-9]*([.0-9]+).*/\1/p'
+
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+
+tmux bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+tmux bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+tmux bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+tmux bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
+tmux_version="$(tmux -V | sed -En "$version_pat")"
+tmux setenv -g tmux_version "$tmux_version"
+
+#echo "{'version' : '${tmux_version}', 'sed_pat' : '${version_pat}' }" > ~/.tmux_version.json
+
+tmux if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+tmux if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+tmux bind-key -T copy-mode-vi C-h select-pane -L
+tmux bind-key -T copy-mode-vi C-j select-pane -D
+tmux bind-key -T copy-mode-vi C-k select-pane -U
+tmux bind-key -T copy-mode-vi C-l select-pane -R
+tmux bind-key -T copy-mode-vi C-\\ select-pane -l
+# }}}
