--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,8 @@ set-option -g prefix2 C-a  # why not both?
 bind | split-window -h     # split panes horizontally
 bind - split-window -v     # split panes vertically
 bind C-u send-keys C-u
-bind C-a last-window
+bind C-a send-keys C-a
+
 bind '\' setw synchronize-panes
 bind i set-option status
 #bind Tab choose-tree -Z
@@ -39,10 +40,10 @@ set -g window-style 'bg=#16161d'
 set -g window-active-style 'bg=#000000'
 
 # resize panes with shift+arrow {{{1
-bind -n S-Up resize-pane -U 5
-bind -n S-Down resize-pane -D 5
-bind -n S-Left resize-pane -L 5
-bind -n S-Right resize-pane -R 5
+bind -n S-Up resize-pane -U 15
+bind -n S-Down resize-pane -D 15
+bind -n S-Left resize-pane -L 15
+bind -n S-Right resize-pane -R 15
 
 # boring stuff {{{1
 set -g bell-action none
