--- a/tmux.conf
+++ b/tmux.conf
@@ -1,36 +1,32 @@
 # vim:fdm=marker
-set -g mouse on
-bind-key r run-shell " \
-        tmux source-file ~/.tmux.conf > /dev/null; \
-        tmux display-message 'sourced ~/.tmux.conf!'"
-
 set-option -g prefix2 C-a  # why not both?
 bind | split-window -h     # split panes horizontally
 bind - split-window -v     # split panes vertically
+unbind '"'
+unbind %
 bind C-u send-keys C-u
-bind C-a send-keys C-a
+bind a send-keys C-b  # send default  prefix nested tmux session 
 
 bind '\' setw synchronize-panes
 bind i set-option status
 #bind Tab choose-tree -Z
 
-# function toggle_panes() {
-#     if [ $(tmux list-panes | wc -l) -eq 2 ]; then
-#         tmux swap-pane -s :.0
-#     else
-#         tmux display 'Not enough panes'
-#     fi
-# }
-# bind S run-shell "toggle_panes"
-
 # TODO 🍝
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",alacritty*:RGB"
-#set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -ga terminal-overrides ",alacritty:Tc"
+#set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 #set-window-option -g mode-keys vi
 #set -g status-keys emacs
+# i want vim keys in copy mode
+setw -g mode-keys vi
+
+# status bar 
+set -g status-bg black
+set -g status-fg white
+set -g status-left ""
+set -g status-right ""
 
 # colors {{{1
 set -g status-style fg=white,bg=black
@@ -38,6 +34,7 @@ set -g status-style fg=white,bg=black
 #set -g pane-border-style 'fg=colour235'
 set -g window-style 'bg=#16161d'
 set -g window-active-style 'bg=#000000'
+#setw -g window-status-current-style 'fg=black,bg=red'
 
 # resize panes with shift+arrow {{{1
 bind -n S-Up resize-pane -U 15
@@ -50,23 +47,30 @@ set -g bell-action none
 set -g focus-events on
 set -g visual-activity on
 set -g monitor-activity on
-# stuff we don't want the mouse doing {{{1
-unbind -n MouseDrag1Pane
-unbind -Tcopy-mode MouseDrag1Pane
-# "sensible" options  {{{1
-# https://github.com/tmux-plugins/tmux-sensible
 set -s escape-time 69       # address vim mode switching delay (but don't set to 0
 set -g history-limit 50000  # increase scrollback buffer size
-set -g display-time 4000    # tmux messages are displayed for 4 seconds
+#set -g display-time 4000    # tmux messages are displayed for 4 seconds
 set -g status-interval 5    # refresh 'status-left' and 'status-right' more often
+set-window-option -g aggressive-resize on  # resize windows on every keypress
+# mouse {{{1
+set -g mouse on
+unbind -n MouseDrag1Pane
+unbind -Tcopy-mode MouseDrag1Pane
+bind-key r run-shell " \
+        tmux source-file ~/.tmux.conf > /dev/null; \
+        tmux display-message 'sourced ~/.tmux.conf!'"
 
-# TODO what?
-# required (only) on OS X
-#set -g default-command "reattach-to-user-namespace -l $SHELL"
 
-# TODO does this even work?
-# see: https://unix.stackexchange.com/questions/622210/tmux-how-to-always-resize-all-windows-to-maximum-available-size
-set-window-option -g aggressive-resize on
+
+if-shell "uname | grep -q Darwin" {
+  #set -g default-command "reattach-to-user-namespace -l $SHELL"
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+} "{
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+}"
+
 
 # TODO see if this conflicts with vim mappings (ie YCM)
 # easier switching between next/prev window
@@ -93,3 +97,7 @@ bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 # }}} 1
+
+# note to self:
+# don't install tmux-sensible or vim-tmux-navigator
+# they're already included 
