--- a/tmux.conf
+++ b/tmux.conf
@@ -5,13 +5,13 @@ bind - split-window -v     # split panes vertically
 unbind '"'
 unbind %
 bind C-u send-keys C-u
-bind a send-keys C-b  # send default  prefix nested tmux session 
+#bind a send-keys C-b
+bind a send-prefix
 
 bind '\' setw synchronize-panes
 bind i set-option status
 #bind Tab choose-tree -Z
 
-# TODO 🍝
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",alacritty*:RGB"
 set-option -ga terminal-overrides ",alacritty:Tc"
@@ -19,28 +19,36 @@ set-option -ga terminal-overrides ",alacritty:Tc"
 
 #set-window-option -g mode-keys vi
 #set -g status-keys emacs
-# i want vim keys in copy mode
 setw -g mode-keys vi
 
-# status bar 
-set -g status-bg black
-set -g status-fg white
-set -g status-left ""
-set -g status-right ""
+# status bar
+set -g status-interval 5
+set -g status-bg '#000000'
+set -g status-fg '#39DD14'
+# use runshell to get the output of a shell command
+set -g status-right '%s'
+set -g status-left " "
+set -g status-style bg=black,fg=white
+set -g status-left "#[fg=green]#S #[fg=cyan]Window: #I #[fg=red]Pane: #P 👾 "
+set -g status-left-length 50
+set -g status-right "#[fg=yellow]Command: #{pane_current_command}"
+set -g status-right-length 50
+set -g status-interval 2
+set -g window-status-format "#I:#W #F"
+set -g window-status-current-format "#[bold]#I:#W#F"
 
 # colors {{{1
 set -g status-style fg=white,bg=black
 #set -g pane-active-border-style 'fg=colour250'
 #set -g pane-border-style 'fg=colour235'
-set -g window-style 'bg=#16161d'
+set -g window-style 'bg=#111111'
 set -g window-active-style 'bg=#000000'
-#setw -g window-status-current-style 'fg=black,bg=red'
 
 # resize panes with shift+arrow {{{1
-bind -n S-Up resize-pane -U 15
-bind -n S-Down resize-pane -D 15
-bind -n S-Left resize-pane -L 15
-bind -n S-Right resize-pane -R 15
+bind -n S-Up    resize-pane -U 10
+bind -n S-Down  resize-pane -D 10
+bind -n S-Left  resize-pane -L 10
+bind -n S-Right resize-pane -R 10
 
 # boring stuff {{{1
 set -g bell-action none
@@ -50,7 +58,6 @@ set -g monitor-activity on
 set -s escape-time 69       # address vim mode switching delay (but don't set to 0
 set -g history-limit 50000  # increase scrollback buffer size
 #set -g display-time 4000    # tmux messages are displayed for 4 seconds
-set -g status-interval 5    # refresh 'status-left' and 'status-right' more often
 set-window-option -g aggressive-resize on  # resize windows on every keypress
 # mouse {{{1
 set -g mouse on
@@ -64,15 +71,13 @@ bind-key r run-shell " \
 
 if-shell "uname | grep -q Darwin" {
   #set -g default-command "reattach-to-user-namespace -l $SHELL"
-  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-} "{
-  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-  bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-}"
+  bind-key -T copy-mode-vi 'y'    send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+  #bind-key -T copy-mode-vi 'y'   send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+  bind-key -T copy-mode-vi Enter  send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+  #bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+}
 
-
-# TODO see if this conflicts with vim mappings (ie YCM)
+# TODO see if this conflicts with vim (YCM) mappings
 # easier switching between next/prev window
 bind-key C-p previous-window
 bind-key C-n next-window
@@ -100,4 +105,4 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # note to self:
 # don't install tmux-sensible or vim-tmux-navigator
-# they're already included 
+# they're already included
