--- a/tmux.conf
+++ b/tmux.conf
@@ -1,27 +1,26 @@
-# vim:fdm=marker
-set-option -g prefix2 C-a  # why not both?
+set-option -g prefix2 C-f
+bind f send-prefix
+
+set -g status-keys emacs
+
 bind | split-window -h     # split panes horizontally
 bind - split-window -v     # split panes vertically
 unbind '"'
 unbind %
-bind C-u send-keys C-u
-#bind a send-keys C-b
-bind a send-prefix
-
 bind '\' setw synchronize-panes
+# bind C-u send-keys C-u
+bind D send-keys C-k
+
 bind i set-option status
-#bind Tab choose-tree -Z
+bind Tab next-window
 
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",alacritty*:RGB"
 set-option -ga terminal-overrides ",alacritty:Tc"
 #set-option -sa terminal-overrides ',xterm-256color:RGB'
 
-#set-window-option -g mode-keys vi
-#set -g status-keys emacs
-setw -g mode-keys vi
+set-window-option -g mode-keys vi
 
-# status bar
 set -g status-interval 5
 set -g status-bg '#000000'
 set -g status-fg '#39DD14'
@@ -37,20 +36,18 @@ set -g status-interval 2
 set -g window-status-format "#I:#W #F"
 set -g window-status-current-format "#[bold]#I:#W#F"
 
-# colors {{{1
 set -g status-style fg=white,bg=black
 #set -g pane-active-border-style 'fg=colour250'
 #set -g pane-border-style 'fg=colour235'
 set -g window-style 'bg=#111111'
 set -g window-active-style 'bg=#000000'
 
-# resize panes with shift+arrow {{{1
 bind -n S-Up    resize-pane -U 10
 bind -n S-Down  resize-pane -D 10
 bind -n S-Left  resize-pane -L 10
 bind -n S-Right resize-pane -R 10
 
-# boring stuff {{{1
+# boring stuff
 set -g bell-action none
 set -g focus-events on
 set -g visual-activity on
@@ -59,15 +56,13 @@ set -s escape-time 69       # address vim mode switching delay (but don't set to
 set -g history-limit 50000  # increase scrollback buffer size
 #set -g display-time 4000    # tmux messages are displayed for 4 seconds
 set-window-option -g aggressive-resize on  # resize windows on every keypress
-# mouse {{{1
+
 set -g mouse on
 unbind -n MouseDrag1Pane
 unbind -Tcopy-mode MouseDrag1Pane
 bind-key r run-shell " \
         tmux source-file ~/.tmux.conf > /dev/null; \
         tmux display-message 'sourced ~/.tmux.conf!'"
-
-
 
 if-shell "uname | grep -q Darwin" {
   #set -g default-command "reattach-to-user-namespace -l $SHELL"
@@ -77,15 +72,10 @@ if-shell "uname | grep -q Darwin" {
   #bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 }
 
-# TODO see if this conflicts with vim (YCM) mappings
-# easier switching between next/prev window
-bind-key C-p previous-window
-bind-key C-n next-window
-
-# smart pane switching with awareness of vim splits {{{1
+# smart pane switching with awareness of vim splits
 # https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
 bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
 bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
 bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
@@ -101,8 +91,3 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
-# }}} 1
-
-# note to self:
-# don't install tmux-sensible or vim-tmux-navigator
-# they're already included
