--- a/alacritty.toml
+++ b/alacritty.toml
@@ -4,7 +4,7 @@ TERM = "xterm-256color"
 [window]
 padding = {x = 2, y = 2}
 dynamic_padding = true
-startup_mode = "SimpleFullscreen"
+# startup_mode = "SimpleFullscreen"
 
 [colors.normal]
 blue = "#14afff"
