--- a/tmux.conf
+++ b/tmux.conf
@@ -16,8 +16,8 @@ bind Tab next-window
 
 set -g default-terminal "tmux-256color"
 set -as terminal-features ",alacritty*:RGB"
-set-option -ga terminal-overrides ",alacritty:Tc"
-#set-option -sa terminal-overrides ',xterm-256color:RGB'
+#set-option -ga terminal-overrides ",alacritty:Tc"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
 
 set-window-option -g mode-keys vi
 
