--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
+
 set-option -g prefix2 C-f
 bind f send-prefix
 
@@ -91,3 +93,8 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+# set -g @plugin 'erikw/tmux-powerline'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
