--- a/alacritty.toml
+++ b/alacritty.toml
@@ -4,7 +4,12 @@ TERM = "xterm-256color"
 [window]
 padding = {x = 2, y = 2}
 dynamic_padding = true
-# startup_mode = "SimpleFullscreen"
+startup_mode = "SimpleFullscreen"
+
+[shell]
+program = "/opt/homebrew/bin/tmux"
+args = ["-2"]
+
 
 [colors.normal]
 blue = "#14afff"
