--- a/alacritty.toml
+++ b/alacritty.toml
@@ -4,7 +4,7 @@ TERM = "xterm-256color"
 [window]
 padding = {x = 2, y = 2}
 dynamic_padding = true
-startup_mode = "SimpleFullscreen"
+#startup_mode = "SimpleFullscreen"
 
 [shell]
 program = "/opt/homebrew/bin/tmux"
@@ -35,4 +35,3 @@ action = "None"
 [selection]
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 save_to_clipboard = true
-
