update tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,71 +1,94 @@
-set-environment -g PATH "/opt/homebrew/bin:/bin:/usr/bin"
-
-set-option -g prefix2 C-f
-bind f send-prefix
+# vim: fdm=marker:fdl=1:nowrap
+set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.tmux/bin"
 
 set -g status-keys emacs
-
-bind | split-window -h     # split panes horizontally
-bind - split-window -v     # split panes vertically
-unbind '"'
-unbind %
-bind '\' setw synchronize-panes
-# bind C-u send-keys C-u
-bind D send-keys C-k
-
-bind i set-option status
-bind Tab next-window
-
-set -g default-terminal "tmux-256color"
-set -as terminal-features ",alacritty*:RGB"
-#set-option -ga terminal-overrides ",alacritty:Tc"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
-
 set-window-option -g mode-keys vi
 
-set -g status-interval 5
-set -g status-bg '#000000'
-set -g status-fg '#39DD14'
-# use runshell to get the output of a shell command
-set -g status-right '%s'
-set -g status-left " "
-set -g status-style bg=black,fg=white
-set -g status-left "#[fg=green]#S #[fg=cyan]Window: #I #[fg=red]Pane: #P 👾 "
-set -g status-left-length 50
-set -g status-right "#[fg=yellow]Command: #{pane_current_command}"
-set -g status-right-length 50
-set -g status-interval 2
-set -g window-status-format "#I:#W #F"
-set -g window-status-current-format "#[bold]#I:#W#F"
+set -g bell-action none
+set -g focus-events on
+set -g visual-activity on
+set -g monitor-activity on
+set -g history-limit 50000
+set -g default-terminal "tmux-256color"
+# set -as terminal-features ",alacritty*:RGB"
+set -sa terminal-overrides ',xterm-256color:RGB'
+# set -ga terminal-overrides ",alacritty:Tc"
+set -g mouse on
+unbind -n MouseDrag1Pane
+unbind -Tcopy-mode MouseDrag1Pane
 
-set -g status-style fg=white,bg=black
-#set -g pane-active-border-style 'fg=colour250'
-#set -g pane-border-style 'fg=colour235'
-set -g window-style 'bg=#111111'
-set -g window-active-style 'bg=#000000'
+# keymaps {{{
+set -g prefix2 C-f
+bind f send-prefix
+bind b send-prefix
+bind | split-window -h     # split panes horizontally `"`
+bind - split-window -v     # split panes vertically `%`
+bind Tab next-window       # cycle through windows
+bind i set status          # toggle status bar
+bind \\ set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
+# bind C-u send-keys C-u
+bind D send-keys C-k
 
 bind -n S-Up    resize-pane -U 10
 bind -n S-Down  resize-pane -D 10
 bind -n S-Left  resize-pane -L 10
 bind -n S-Right resize-pane -R 10
 
-# boring stuff
-set -g bell-action none
-set -g focus-events on
-set -g visual-activity on
-set -g monitor-activity on
-set -s escape-time 69       # address vim mode switching delay (but don't set to 0
-set -g history-limit 50000  # increase scrollback buffer size
-#set -g display-time 4000    # tmux messages are displayed for 4 seconds
-set-window-option -g aggressive-resize on  # resize windows on every keypress
-
-set -g mouse on
-unbind -n MouseDrag1Pane
-unbind -Tcopy-mode MouseDrag1Pane
 bind-key r run-shell " \
         tmux source-file ~/.tmux.conf > /dev/null; \
         tmux display-message 'sourced ~/.tmux.conf!'"
+# }}}
 
+# tokyonight status bar {{{
+# https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux/tokyonight_night.tmux
+# ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
+
+set -g status-interval 1
+set -g mode-style "bg=#7aa2f7,fg=#3b4261"
+set -g message-style "bg=#7aa2f7,fg=#3b4261"
+set -g message-command-style "fg=#7aa2f7,bg=#3b4261"
+set -g pane-border-style "fg=#3b4261"
+set -g pane-active-border-style "fg=#7aa2f7"
+set -g status "on"
+set -g status-justify "left"
+set -g status-style "fg=#7aa2f7,bg=default"
+set -g status-left-length "100"
+set -g status-right-length "100"
+set -g status-left-style NONE
+set -g status-right-style NONE
+
+set -g status-left ""
+set -ga status-left "#{?#{==:#{server_sessions},1},,#[fg=#15161e,bg=#7aa2f7,bold] Sesh:#S }"
+set -ga status-left "#{?#{==:#{session_windows},1},,#[fg=#15161e,bg=#7aa2f7,bold] Win:#I }"
+set -ga status-left "#{?#{==:#{window_panes},1},,#[fg=#15161e,bg=#7aa2f7,bold] Pane:#P }"
+set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics] "
+set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold]👾 #{pane_current_command} "
+# set -ga status-left "#{?#{==:#{window_index},0},#[fg=#3b4261,bg=#3b4261,nobold,nounderscore,noitalics] ,#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]} "
+
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#a9b1d6,bg=default"
+setw -g window-status-format "#[fg=#a9b1d6,bg=default] #I:#P:#W [#F]"
+setw -g window-status-activity-style "underscore,fg=#e0af68,bg=default"
+# setw -g window-status-current-style "bold,fg=default,bg=#3b4261"
+setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] #I:#P:#W [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+setw -g window-status-last-style "bold,fg=#f7768e,bg=default"
+
+set -g status-right ""
+# set -ga status-right "#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+# set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] 💻 #(tmux-mem-cpu-load.sh)  #(tmux-battery) "
+set -ga status-right "#[fg=#FFFFFF,bg=default] 💻 #(tmux-mem-cpu-load)  "
+set -ga status-right "#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] #(tmux-battery) "
+set -ga status-right "#[fg=#16161e,bg=#default,nobold,nounderscore,noitalics]"
+set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold] %U 🗓️ %a  ⏱️ %s"
+
+# tmux-plugins/tmux-prefix-highlight support
+# set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
+# set -g @prefix_highlight_output_suffix ""
+# }}}
+
+
+# fix copy-paste on mac {{{
 if-shell "uname | grep -q Darwin" {
   #set -g default-command "reattach-to-user-namespace -l $SHELL"
   bind-key -T copy-mode-vi 'y'    send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
@@ -73,28 +96,12 @@ if-shell "uname | grep -q Darwin" {
   bind-key -T copy-mode-vi Enter  send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
   #bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 }
+# }}}
 
-# smart pane switching with awareness of vim splits
-# https://github.com/christoomey/vim-tmux-navigator
-is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?)(diff)?$'"
-bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
-bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
-bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
-bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+set -s escape-time 69
 
 # set -g @plugin 'erikw/tmux-powerline'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
