--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,10 @@ set -g visual-activity on
 set -g monitor-activity on
 set -g history-limit 50000
 set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-256color"
 # set -as terminal-features ",alacritty*:RGB"
-set -sa terminal-overrides ',xterm-256color:RGB'
+# set -sa terminal-overrides ',xterm-256color:RGB'
+set -ga terminal-overrides ",*256col*:Tc"
 # set -ga terminal-overrides ",alacritty:Tc"
 set -g mouse on
 unbind -n MouseDrag1Pane
@@ -25,9 +27,8 @@ bind | split-window -h     # split panes horizontally `"`
 bind - split-window -v     # split panes vertically `%`
 bind Tab next-window       # cycle through windows
 bind i set status          # toggle status bar
-bind \\ set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
-# bind C-u send-keys C-u
-bind D send-keys C-k
+bind \\ set-window-option synchronize-panes\; /
+	display-message "synchronize-panes = #{?pane_synchronized,on,off}"
 
 bind -n S-Up    resize-pane -U 10
 bind -n S-Down  resize-pane -D 10
@@ -39,7 +40,7 @@ bind-key r run-shell " \
         tmux display-message 'sourced ~/.tmux.conf!'"
 # }}}
 
-# tokyonight status bar {{{
+# status bar {{{
 # https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux/tokyonight_night.tmux
 # ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
 
@@ -63,6 +64,7 @@ set -ga status-left "#{?#{==:#{session_windows},1},,#[fg=#15161e,bg=#7aa2f7,bold
 set -ga status-left "#{?#{==:#{window_panes},1},,#[fg=#15161e,bg=#7aa2f7,bold] Pane:#P }"
 set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,nobold,nounderscore,noitalics] "
 set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold]👾 #{pane_current_command} "
+set -ga status-left "#[fg=#7aa2f7,bg=#3b4261,bold]📂 #{pane_current_path}"
 # set -ga status-left "#{?#{==:#{window_index},0},#[fg=#3b4261,bg=#3b4261,nobold,nounderscore,noitalics] ,#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]} "
 
 setw -g window-status-separator ""
@@ -78,11 +80,12 @@ set -g status-right ""
 # set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] 💻 #(tmux-mem-cpu-load.sh)  #(tmux-battery) "
 set -ga status-right "#[fg=#FFFFFF,bg=default] 💻 #(tmux-mem-cpu-load)  "
 set -ga status-right "#[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
-set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] #(tmux-battery) "
+# ~/.tmux/bin/tmux-battery.sh
+set -ga status-right "#[fg=#7aa2f7,bg=#3b4261] #(tmux-battery.sh) "
 set -ga status-right "#[fg=#16161e,bg=#default,nobold,nounderscore,noitalics]"
-set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold] %U 🗓️ %a  ⏱️ %s"
+set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold] %U 🗓️ %a  ⏱️ %s \ "
 
-# tmux-plugins/tmux-prefix-highlight support
+# tmux-plugins/tmux-prefix-highlight suppor\t
 # set -g @prefix_highlight_output_prefix "#[fg=#e0af68]#[bg=#16161e]#[fg=#16161e]#[bg=#e0af68]"
 # set -g @prefix_highlight_output_suffix ""
 # }}}
