--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # vim: fdm=marker:fdl=1:nowrap
-set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.tmux/bin"
+set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.files/scripts/tmux/"
 
 set -g status-keys emacs
 set-window-option -g mode-keys vi
@@ -27,8 +27,8 @@ bind | split-window -h     # split panes horizontally `"`
 bind - split-window -v     # split panes vertically `%`
 bind Tab next-window       # cycle through windows
 bind i set status          # toggle status bar
-bind \\ set-window-option synchronize-panes\; /
-	display-message "synchronize-panes = #{?pane_synchronized,on,off}"
+bind \\ set-window-option synchronize-panes\; display-message "\
+	synchronize-panes = #{?pane_synchronized,on,off}"
 
 bind -n S-Up    resize-pane -U 10
 bind -n S-Down  resize-pane -D 10
@@ -72,7 +72,8 @@ setw -g window-status-style "NONE,fg=#a9b1d6,bg=default"
 setw -g window-status-format "#[fg=#a9b1d6,bg=default] #I:#P:#W [#F]"
 setw -g window-status-activity-style "underscore,fg=#e0af68,bg=default"
 # setw -g window-status-current-style "bold,fg=default,bg=#3b4261"
-setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] #I:#P:#W [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+# setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] #I:#P:#W [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#FFFFFF,bg=#3b4261,bold] [#F] #[fg=#3b4261,bg=default,nobold,nounderscore,noitalics]"
 setw -g window-status-last-style "bold,fg=#f7768e,bg=default"
 
 set -g status-right ""
@@ -95,8 +96,8 @@ set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold] %U 🗓️ %a  ⏱️ %s 
 if-shell "uname | grep -q Darwin" {
   #set -g default-command "reattach-to-user-namespace -l $SHELL"
   bind-key -T copy-mode-vi 'y'    send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-  #bind-key -T copy-mode-vi 'y'   send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
   bind-key -T copy-mode-vi Enter  send -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+  #bind-key -T copy-mode-vi 'y'   send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
   #bind-key -T copy-mode-vi Enter send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 }
 # }}}
