--- a/tmux.conf
+++ b/tmux.conf
@@ -41,6 +41,7 @@ bind-key r run-shell " \
 # }}}
 
 # status bar {{{
+set-option -g status-position top
 # https://github.com/folke/tokyonight.nvim/blob/main/extras/tmux/tokyonight_night.tmux
 # ~/.local/share/nvim/lazy/tokyonight.nvim/extras/tmux/tokyonight_night.tmux
 
