--- a/tmux.conf
+++ b/tmux.conf
@@ -105,6 +105,10 @@ if-shell "uname | grep -q Darwin" {
 
 set -s escape-time 69
 
+# is_vim="ps -o comm= -t '#{pane_tty}' | grep -iqE '^(n?vim|view)$'"
+# set-hook -g pane-active 'if-shell "$is_vim" "set-option -g status off" "set-option -g status on"'
+# if-shell "$is_vim" "set-option -g status off" "set-option -g status on"
+
 # set -g @plugin 'erikw/tmux-powerline'
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
