--- a/tmux.conf
+++ b/tmux.conf
@@ -92,6 +92,12 @@ set -ga status-right "#[fg=#15161e,bg=#7aa2f7,bold] %U 🗓️ %a  ⏱️ %s 
 # set -g @prefix_highlight_output_suffix ""
 # }}}
 
+# no status bar for snacks-sesh
+set-hook -g after-new-session 'run-shell "
+  if [ #{==:#{session_name},snacks-sesh} ]; then
+    tmux set -g status off;
+  fi
+"'
 
 # fix copy-paste on mac {{{
 if-shell "uname | grep -q Darwin" {
@@ -106,6 +112,7 @@ if-shell "uname | grep -q Darwin" {
 set -s escape-time 69
 
 # is_vim="ps -o comm= -t '#{pane_tty}' | grep -iqE '^(n?vim|view)$'"
+
 # set-hook -g pane-active 'if-shell "$is_vim" "set-option -g status off" "set-option -g status on"'
 # if-shell "$is_vim" "set-option -g status off" "set-option -g status on"
 
