need to organize tmux files

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,5 +1,7 @@
 # vim: fdm=marker:fdl=1:nowrap
-set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.files/scripts/tmux/"
+# Make sure tmux can find the scripts it needs
+# set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.files/scripts/tmux/"
+set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/Desktop/GitHub/rdnajac/.files/tmux/"
 
 set -g status-keys emacs
 set-window-option -g mode-keys vi
@@ -38,6 +40,12 @@ bind -n S-Right resize-pane -R 10
 bind-key r run-shell " \
         tmux source-file ~/.tmux.conf > /dev/null; \
         tmux display-message 'sourced ~/.tmux.conf!'"
+
+# unbind n
+unbind n
+bind n new-window
+
+bind q break-pane
 # }}}
 
 # status bar {{{
@@ -120,4 +128,4 @@ set -s escape-time 69
 # set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
