--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # vim: fdm=marker:fdl=1:nowrap
 # Make sure tmux can find the scripts it needs
 # set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/.files/scripts/tmux/"
-set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/Desktop/GitHub/rdnajac/.files/tmux/"
+set-environment -g PATH "/usr/bin:/opt/homebrew/bin:$HOME/GitHub/rdnajac/.files/config/tmux/bin"
 
 set -g status-keys emacs
 set-window-option -g mode-keys vi
@@ -125,7 +125,11 @@ set -s escape-time 69
 # if-shell "$is_vim" "set-option -g status off" "set-option -g status on"
 
 # set -g @plugin 'erikw/tmux-powerline'
-# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# set -g @plugin 'tmuxin manager (keep-plugins/tmux-prefix-highlight'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run '~/.tmux/plugins/tpm/tpm'
+# Initialize TMUX plug this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+# TODO does this work?
+# run './config/tmux/plugins/tpm/tpm'
